# IntraView-MajorOne

./: .gitignore  BUILD_AND_PACKAGE.md  BUILD_SUMMARY.md  CPP_OVERLAY_DOCUMENTATION.md  PRD_Advanced_Overlay.md  QUICK_START.md  README.md  SCREEN_SHARE_GUIDE.md  SETUP_COMPLETE.md  build.bat  build.ps1  package-lock.json  package.json  set-api-key.js  tsconfig.main.json  tsconfig.renderer.json
assets/: ICON_INSTRUCTIONS.md  README.md
overlay/: CMakeLists.txt  README.md
overlay/src/: IPCManager.cpp  IPCManager.h  OverlayWindow.cpp  OverlayWindow.h  main.cpp
src/main/: SetWindowAffinity.cs  main.ts  overlay-manager.ts  set-window-affinity.ps1  window-affinity.ts  window-capture-exclusion.ts
src/main/platform/: macos-platform.ts  platform-helper.ts  windows-platform.ts
src/main/services/: audio-service.ts  document-service.ts  ocr-service.ts  screen-area-selector.ts  screenshot-service.ts  settings-manager.ts  transcription-service.ts
src/preload/: preload.js  preload.js.map  preload.ts
src/renderer/: chat.css  chat.html  chat.ts  settings.css  settings.html  settings.ts  types.d.ts
